--- a/HTML/Laptop.html
+++ b/HTML/Laptop.html
@@ -22,6 +22,7 @@
             </div>
             <div class="right">
                 <ul>
+                    <li><a href="GioiThieu.html"><i class="fas fa-user"></i> Giới Thiệu</a></li>
                     <li><a href="#"><i class="fas fa-headset"></i> Hotline <strong>1234.5678</strong></a></li>
                     <li><a href="#"><i class="fas fa-map-marker-alt"></i> Showroom</a></li>
                     <li><a href="TraCuuDonHang.html"><i class="fas fa-truck"></i> Tra cứu đơn hàng</a></li>
@@ -184,7 +185,7 @@
             <div class="footer-column">
                 <h4>Về TechZone</h4>
                 <ul>
-                    <li><a href="#">Giới thiệu</a></li>
+                    <li><a href="GioiThieu.html">Giới thiệu</a></li>
                     <li><a href="#">Tuyển dụng</a></li>
                     <li><a href="#">Liên hệ</a></li>
                 </ul>
