--- a/HTML/login.html
+++ b/HTML/login.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="../CSS/style_login.css">
     <link rel="icon" href="../IMG/Main/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+        body{
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
     <div class="header">
@@ -19,6 +24,7 @@
             </div>
             <div class="right">
                 <ul>
+                    <li><a href="GioiThieu.html"><i class="fas fa-user"></i> Giới Thiệu</a></li>
                     <li><a href="#"><i class="fas fa-headset"></i> Hotline <strong>1234.5678</strong></a></li>
                     <li><a href="#"><i class="fas fa-map-marker-alt"></i> Showroom</a></li>
                     <li><a href="TraCuuDonHang.html"><i class="fas fa-truck"></i> Tra cứu đơn hàng</a></li>
@@ -93,7 +99,7 @@
             <div class="footer-column">
                 <h4>Về TechZone</h4>
                 <ul>
-                    <li><a href="#">Giới thiệu</a></li>
+                    <li><a href="GioiThieu.html">Giới thiệu</a></li>
                     <li><a href="#">Tuyển dụng</a></li>
                     <li><a href="#">Liên hệ</a></li>
                 </ul>
