them gia goc , giam gia , laptop moi , flash sale, cap nhat data

--- a/HTML/pc.html
+++ b/HTML/pc.html
@@ -54,86 +54,86 @@
             <a href="index.html" class="back-home-btn"> <i class="fas fa-home"></i>  Trang Chủ</a>
         </div>
         <div class="grid_product">
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('21')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 21">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('22')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 22">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('23')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 23">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('24')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 24">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('25')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 25">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
             
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('26')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 26">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('27')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 27">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('28')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 28">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('29')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 29">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('30')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 30">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('31')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 31">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('32')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 32">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
             
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('33')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 33">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
 
-            <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+            <div class="product-card" onclick="showModal('34')">
+                <img src="../IMG/items/zephyrus_g14.webp" alt="PC 34">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
