--- a/HTML/Laptop.html
+++ b/HTML/Laptop.html
@@ -49,7 +49,7 @@
     <div class="img-right">
         <img src="../IMG/Banner/demo6.png">
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <img src="../IMG/Banner/demo9.png" style="width: 100%;">
         <div>
             <a href="index.html" class="back-home-btn"> <i class="fas fa-home"></i>  Trang Chủ</a>
