--- a/HTML/TraCuuDonHang.html
+++ b/HTML/TraCuuDonHang.html
@@ -132,10 +132,10 @@
                         <p><strong>Trạng thái:</strong> <span style="color: green;">Đang giao</span></p>
                         <p><strong>Sản phẩm:</strong></p>
                         <ul>
-                            <li>Chuột Gaming Razer - 1 cái - 1.200.000đ</li>
+                            <li>Laptop ASUS ROG Zephyrus G14 - 1 cái - 50.990.000đ</li>
                             <li>Bàn phím cơ AKKO - 1 cái - 1.500.000đ</li>
                         </ul>
-                        <p><strong>Tổng tiền:</strong> <span style="color: red;">2.700.000đ</span></p>
+                        <p><strong>Tổng tiền:</strong> <span style="color: red;">52.490.000đ</span></p>
                     `;
                     document.getElementById('inputMaDonHang').value = "";
                 } else {
