--- a/HTML/index.html
+++ b/HTML/index.html
@@ -141,7 +141,7 @@
             </div>
 
             <div class="product-card" onclick="showModal('1')">
-                <img src="../IMG/items/zephyrus_g14.webp" alt="Laptop 1">
+                <img src="../IMG/items/1_zephyrus_g14.webp" alt="Laptop 1">
                 <div class="product-name">Laptop ASUS ROG Zephyrus G14</div>
                 <div class="price">50.990.000đ</div>
             </div>
@@ -191,7 +191,9 @@
                 <div class="product-name">PC TZ MSI PROJECT HERO</div>
                 <div class="price">27.891.000đ</div>
             </div>
+        </div>
     </div>
+    
     <img src="../IMG/Banner/demo8.png"  style="width: 100%;">
 
     <div class="Banner">
