--- a/HTML/GioiThieu.html
+++ b/HTML/GioiThieu.html
@@ -48,7 +48,7 @@
     <section class="team-section">
         <h2 class="team-title">Thành viên nhóm</h2>
         <div class="team-container">
-            <a href="https://www.facebook.com/khoa.le.tran21" target="_blank" class="member-card">
+            <a href="https://khoaletran.github.io/Profile/?fbclid=IwY2xjawJ5QvVleHRuA2FlbQIxMABicmlkETE3VGlLdUhVd1FkVG9zeHdoAR5mT0f6ompj9y2GoFHiF7t28cO9R7vxpgMQiK5Qp44h2jDg-1rSs8mfI-V3tw_aem_JBELkM_p1mlTxffynkCFkQ" target="_blank" class="member-card">
                 <img src="../IMG/Main/khoa.png" alt="Trần Lê Khoa" class="member-photo">
                 <h3>Trần Lê Khoa</h3>
                 <h4>MSSV : 23701071</h4>
